--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "convert": "node js-to-ts.js",
     "deploy": "npm run build && firebase deploy",
     "deploy:rules": "node deploy-security-rules.js",
-    "deploy:hosting": "npm run build && firebase deploy --only hosting"
+    "deploy:hosting": "npm run build && firebase deploy --only hosting",
+    "typecheck": "node check-ts.js"
   },
   "eslintConfig": {
     "extends": [
