--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,7 @@
 # production
 /build
 
-# misc
-.DS_Store
+# Environment variables
 .env
 .env.local
 .env.development
@@ -47,3 +46,13 @@ migration-analysis.json
 
 # Security audit results
 security-audit-results.json
+
+# TypeScript
+*.tsbuildinfo
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+desktop.ini
